# Tau.KeyVault

./: .gitignore  LICENSE  README.md
Tau.KeyVault/: AuthEndpoints.cs  Dockerfile  Program.cs  README.md  Tau.KeyVault.csproj  Tau.KeyVault.sln  appsettings.json  appsettings.json.with_salt  build-docker.sh  xkeyvault.db
Tau.KeyVault.CSClient/: KeyVaultApiException.cs  KeyVaultClient.cs  KeyVaultClientOptions.cs  KeyVaultTransport.cs  README.md  ServiceCollectionExtensions.cs  Tau.KeyVault.Client.csproj  sample_publish-nuget.ps1  sample_publish-nuget.sh
Tau.KeyVault.CSClient/Models/: ApiModels.cs  KeyVaultDataType.cs
Tau.KeyVault.GoClient/: README.md  client.go  enums.go  errors.go  go.mod  helpers.go  models.go  proto.go
Tau.KeyVault.JsClient/: README.md  package.json
Tau.KeyVault.JsClient/src/: KeyVaultApiError.js  KeyVaultClient.js  enums.js  index.d.ts  index.js  proto.js
Tau.KeyVault.PyClient/: README.md  pyproject.toml
Tau.KeyVault.PyClient/tau_keyvault/: __init__.py  client.py  enums.py  errors.py  models.py  proto.py
Tau.KeyVault.SaltRecovery/: Program.cs  README.md  Tau.KeyVault.SaltRecovery.csproj  Tau.KeyVault.SaltRecovery.sln
Tau.KeyVault/Components/: App.razor  Routes.razor  _Imports.razor
Tau.KeyVault/Controllers/: KeyVaultApiController.cs
Tau.KeyVault/Data/: AppDbContext.cs  DbSeeder.cs
Tau.KeyVault/Formatters/: ProtoSchemaGenerator.cs  ProtobufInputFormatter.cs  ProtobufOutputFormatter.cs
Tau.KeyVault/Middleware/: ApiKeyMiddleware.cs
Tau.KeyVault/Models/: ApiRequests.cs  ApiResponses.cs  AppSetting.cs  AppUser.cs  DataType.cs  (+4 more)
(+26 files in other folders)
